--- a/assets/main.css
+++ b/assets/main.css
@@ -8,10 +8,10 @@
 }
 
 div{
-  display: block;
-  width: 300px;
-  height: 100px;
-  margin-left: 400px;
+  display: inline;
+  width: 200px;
+  height: 150px;
+  margin-left: 20px;
   font-size: 30px;
-  margin-bottom: 15px;
+
 }
