--- a/assets/main.css
+++ b/assets/main.css
@@ -9,9 +9,10 @@
 
 div{
   display: inline;
-  width: 200px;
+  width: 250px;
   height: 150px;
-  margin-left: 20px;
+  margin-left: 10px;
   font-size: 30px;
-
+  padding-bottom: 40px;
+  padding-right: 100px;
 }
